force-app/main/default/objects/OneCRM__Communicator_Email__c/OneCRM__Communicator_Email__c.object-meta.xml
<CustomObject>
    <label>Communicator Email</label>
    <nameField>
        <label>Communicator Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communicator Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>