force-app/main/default/objects/OneCRM__Communicator_Email__c/fields/OneCRM__Campaign__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Communicator Emails</relationshipLabel>
    <relationshipName>Communicator_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>