force-app/main/default/objects/OneCRM__Communicator_Email__c/fields/OneCRM__Email_Id__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Email_Id__c</fullName>
    <description>The Id of the email in communicator.</description>
    <externalId>true</externalId>
    <label>Email Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>