force-app/main/default/objects/OneCRM__Communicator_Email__c/fields/OneCRM__Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Schedule_Date__c</fullName>
    <label>Schedule Date</label>
    <type>DateTime</type>
</CustomField>