force-app/main/default/objects/OneCRM__Communicator_Email__c/fields/OneCRM__Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Sender_Email__c</fullName>
    <label>Sender Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>