force-app/main/default/objects/OneCRM__Communicator_Email__c/fields/OneCRM__Soql_Query__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Soql_Query__c</fullName>
    <label>Soql Query</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>