force-app/main/default/objects/OneCRM__Communicator_Email__c/fields/OneCRM__Subject__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>